--- a/index.html
+++ b/index.html
@@ -412,13 +412,13 @@
                 <div class="group-title"><a href="http://zakladki.at.ua/"><span class="badge badge-danger">Обнова в закладках: v.2019-03-20</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon a0info-opis5"></div>
-                    <div class="icon a0pencil-1" title="Полезная информация" alt=""></div><a href="https://www.bbc.com/ukrainian/features-russian-41112484" target="_blank">ТВ-карта Украины.</a>
+                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.bbc.com/ukrainian/features-russian-41112484" target="_blank">ТВ-карта Украины.</a>
                     <div class="icontooinfo a0repa3" title="Кто с чем подходит к выборам. Судьбу предстоящих президентских выборов все еще будет решать поддержка ключевых телеканалов страны, хотя интернет составит серьезную конкуренцию телевизору." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0info-opis5"></div>
-                    <div class="icon a0youtubeinform" title="Полезная информация" alt=""></div><a href="https://www.youtube.com/watch?v=A25RRbUh4Ws" target="_blank">Список виборців.</a>
+                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
+                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://www.youtube.com/watch?v=A25RRbUh4Ws" target="_blank">Список виборців.</a>
                     <div class="icontooinfo a0repa3" title="Дізнайся чи є ти в списках виборців? Непроєвибори! Переходь на сайт: drv.gov.ua" alt=""></div>
                   </li>
                   <li>
