--- a/media.html
+++ b/media.html
@@ -193,7 +193,7 @@
                     <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a href="https://t.me/hit_beat" target="_blank">t/hit_bit</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a href="https://t.me/music_breakbeat" target="_blank">t/hit_bit</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
