--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon bible-teka com"></div><a href="https://bible-teka.com/" target="_blank">bible-teka</a><span class="opisi">Библия онлайн</span>
+                    <div class="icon bible-teka com"></div><a href="https://bible-teka.com/synodal/" target="_blank">bible-teka</a><span class="opisi">Библия онлайн</span>
                   </li>
                   <li>
                     <div class="icon slovohrista org"></div><a href="http://slovohrista.org/" target="_blank">slovohrista.org</a>
@@ -409,7 +409,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/"><span class="badge badge-danger">Обнова в закладках: v.2019-03-20</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обнова в закладках: v.2019-03-20</span></a></div>
                 <ul>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
