--- a/others.html
+++ b/others.html
@@ -239,7 +239,7 @@
                     <div class="icon bibleonline ru"></div><a href="https://www.bibleonline.ru/" target="_blank">bibleonline.ru</a><span class="opisi">Библия онлайн</span>
                   </li>
                   <li>
-                    <div class="icon bible-teka com"></div><a href="https://bible-teka.com/" target="_blank">bible-teka.com</a><span class="opisi">Библия онлайн</span>
+                    <div class="icon bible-teka com"></div><a href="https://bible-teka.com/synodal/" target="_blank">bible-teka.com</a><span class="opisi">Библия онлайн</span>
                   </li>
                   <li>
                     <div class="icon bible by"></div><a href="https://bible.by/" target="_blank">bible.by</a><span class="opisi">Библия онлайн</span>
