--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link href="styles/hamburgers.min.css" rel="stylesheet">
     <link href="styles/animation.css" rel="stylesheet">
     <link href="styles/menu_button.css" rel="stylesheet">
-    <title>ZAKLADKI</title>
+    <title>ZAKLADKI - Список популярных сайтов (ТОП ЗАКЛАДКИ)</title>
   </head>
   <body>
     <div class="container nav-container">
