--- a/index.html
+++ b/index.html
@@ -413,12 +413,12 @@
                 <ul>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.bbc.com/ukrainian/features-russian-41112484" target="_blank">ТВ-карта Украины.</a>
-                    <div class="icontooinfo a0repa3" title="Кто с чем подходит к выборам. Судьбу предстоящих президентских выборов все еще будет решать поддержка ключевых телеканалов страны, хотя интернет составит серьезную конкуренцию телевизору." alt=""></div>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.bbc.com/ukrainian/features-russian-41112484" target="_blank">ТВ-карта Украины</a>
+                    <div class="icontooinfo a0repa3" title="Какие каналы ТВ на кого работают. Кто с чем подходит к выборам." alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
-                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://www.youtube.com/watch?v=A25RRbUh4Ws" target="_blank">Список виборців.</a>
+                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://www.youtube.com/watch?v=A25RRbUh4Ws" target="_blank">Список виборців</a>
                     <div class="icontooinfo a0repa3" title="Дізнайся чи є ти в списках виборців? Непроєвибори! Переходь на сайт: drv.gov.ua" alt=""></div>
                   </li>
                   <li>
@@ -455,7 +455,7 @@
             <div class="kolobok">
               <ul class="share-buttons">
                 <!-- AddToAny BEGIN-->
-                <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="https://zakladki.github.io" data-a2a-title="Топ Закладки"><a class="a2a_dd" href="https://www.addtoany.com/share"></a><a class="a2a_button_facebook"></a><a class="a2a_button_vk"></a><a class="a2a_button_telegram"></a><a class="a2a_button_viber"></a><a class="a2a_button_odnoklassniki"></a><a class="a2a_button_skype"></a></div>
+                <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="https://zakladki.github.io" data-a2a-title="Топ Закладки"><a class="a2a_dd" href="https://www.addtoany.com/share"></a><a class="a2a_button_facebook"></a><a class="a2a_button_vk"></a><a class="a2a_button_odnoklassniki"></a><a class="a2a_button_telegram"></a><a class="a2a_button_viber"></a><a class="a2a_button_skype"></a></div>
                 <script>
                   var a2a_config = a2a_config || {};
                   a2a_config.onclick = 1;
