--- a/shops.html
+++ b/shops.html
@@ -186,7 +186,7 @@
                     <div class="icon avtozvuk ua"></div><a href="https://letyshops.com/r/baza-avtozvuka-4qh7st5csyassk" target="_blank">avtozvuk.ua`</a>
                   </li>
                   <li>
-                    <div class="icon autoklad ua"></div><a href="https://letyshops.com/r/avtoklad-ua-4qh7st5csyassk" target="_blank">autoklad.ua`</a>
+                    <div class="icon autoklad ua"></div><a href="https://www.autoklad.ua/" target="_blank">autoklad.ua</a>
                   </li>
                   <li>
                     <div class="icon avtoopt in ua"></div><a href="https://letyshops.com/r/avtoopt-ua-4qh7st5csyeckc" target="_blank">avtoopt.in.ua`</a>
@@ -366,7 +366,7 @@
             <div class="kolobok">
               <ul class="share-buttons">
                 <!-- AddToAny BEGIN-->
-                <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="https://zakladki.github.io" data-a2a-title="Топ Закладки"><a class="a2a_dd" href="https://www.addtoany.com/share"></a><a class="a2a_button_facebook"></a><a class="a2a_button_vk"></a><a class="a2a_button_telegram"></a><a class="a2a_button_viber"></a><a class="a2a_button_odnoklassniki"></a><a class="a2a_button_skype"></a></div>
+                <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="https://zakladki.github.io" data-a2a-title="Топ Закладки"><a class="a2a_dd" href="https://www.addtoany.com/share"></a><a class="a2a_button_facebook"></a><a class="a2a_button_vk"></a><a class="a2a_button_odnoklassniki"></a><a class="a2a_button_telegram"></a><a class="a2a_button_viber"></a><a class="a2a_button_skype"></a></div>
                 <script>
                   var a2a_config = a2a_config || {};
                   a2a_config.onclick = 1;
