--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <meta name="author" content="WebSIS &amp; Company">
     <meta name="keywords" content="лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, топ сайтів, speeddial, новости, соцсети, видео, погода">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- Player-top-->
+    <script src="https://zakladki.github.io/playerjs.js" type="text/javascript"></script>
     <!-- Bootstrap CSS-->
     <link href="styles/bootstrap.min.css" rel="stylesheet">
     <link href="styles/all.css" rel="stylesheet">
@@ -436,6 +438,11 @@
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс" alt=""></div>
                   </li>
+                  <!-- тут код плеера
+                  #player
+                  script.
+                    var player = new Playerjs({id:"player", file:"video.mp4"});
+                  -->
                   <!-- тут реклама от ГУГЛ-->
                   <!-- тут реклама от ГУГЛ-->
                 </ul>
