--- a/index.html
+++ b/index.html
@@ -439,8 +439,9 @@
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс" alt=""></div>
                   </li>
                   <!-- тут код плеера-->
-                  <div id="player"></div>
-                  <script>var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist.txt"});</script>
+                  <div id="player" style="height:120px">
+                    <script>var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist.txt"});</script>
+                  </div>
                   <!-- тут реклама от ГУГЛ-->
                   <!-- тут реклама от ГУГЛ-->
                 </ul>
