--- a/index.html
+++ b/index.html
@@ -411,8 +411,13 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обнова в закладках: v.2019-03-20</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обнова в закладках: v.2019-03-21</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
+                    <div class="icon a0youtubeinform" title="Аудио информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Добавлен MP3 плеер</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Медиа. Добавлен плеер для прослушивания музыки ТОП-100 (позже будет ТОП-200)" alt=""></div>
+                  </li>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
                     <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.bbc.com/ukrainian/features-russian-41112484" target="_blank">ТВ-карта Украины</a>
