--- a/media.html
+++ b/media.html
@@ -74,11 +74,11 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеер, ТОП-100 лучших музыкальных треков</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеер (ТОП-100) playlist.2019-04</span></div>
                 <ul>
                   <li></li>
                   <!-- тут код плеера-->
-                  <div id="player" style="height:70px;width:240px">
+                  <div id="player" style="height:60px;width:240px">
                     <script>var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist.txt"});</script>
                   </div>
                   <!-- тут код плеера-->
