--- a/media.html
+++ b/media.html
@@ -38,7 +38,7 @@
     <link href="styles/hamburgers.min.css" rel="stylesheet">
     <link href="styles/animation.css" rel="stylesheet">
     <link href="styles/menu_button.css" rel="stylesheet">
-    <title>Медиа</title>
+    <title>Медиа - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)</title>
   </head>
   <body>
     <div class="container nav-container">
@@ -281,8 +281,8 @@
                 //-->
               </script>
               <script type="text/javascript" src="https://get.mycounter.ua/counter2.0.js"></script>
-              <noscript><a target="_blank" href="https://mycounter.ua/"><img src="https://get.mycounter.ua/counter.php?id=168151" title="MyCounter - счётчик и статистика" alt="" width="88" height="31" border="0"></a></noscript>
-            </div>
+              <noscript></noscript>
+            </div><a target="_blank" href="https://mycounter.ua/"><img src="https://get.mycounter.ua/counter.php?id=168151" title="MyCounter - счётчик и статистика" alt="" width="88" height="31" border="0"></a>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok"><a href="http://zakladki.at.ua/" target="_blank">Беседка</a> / <a href="http://zakladki.at.ua/index/0-3" target="_blank">Задать вопрос</a></div>
