--- a/games.html
+++ b/games.html
@@ -257,8 +257,8 @@
                 //-->
               </script>
               <script type="text/javascript" src="https://get.mycounter.ua/counter2.0.js"></script>
-              <noscript></noscript>
-            </div><a target="_blank" href="https://mycounter.ua/"><img src="https://get.mycounter.ua/counter.php?id=168151" title="MyCounter - счётчик и статистика" alt="" width="88" height="31" border="0"></a>
+              <noscript><a target="_blank" href="https://mycounter.ua/"><img src="https://get.mycounter.ua/counter.php?id=168151" title="MyCounter - счётчик и статистика" alt="" width="88" height="31" border="0"></a></noscript>
+            </div>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok"><a href="http://zakladki.at.ua/" target="_blank">Беседка</a> / <a href="http://zakladki.at.ua/index/0-3" target="_blank">Задать вопрос</a></div>
