--- a/index.html
+++ b/index.html
@@ -415,6 +415,11 @@
                 <ul>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
+                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://www.youtube.com/watch?v=IiLNEBWq6E0&amp;feature=youtu.be" target="_blank">Настройка ZAKLADOK</a>
+                    <div class="icontooinfo a0repa3" title="Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
                     <div class="icon a0youtubeinform" title="Аудио информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Добавлен MP3 плеер</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Медиа. Добавлен плеер для прослушивания музыки ТОП-100 (позже будет ТОП-200)" alt=""></div>
                   </li>
