--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                   </li>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
-                    <div class="icon a0youtubeinform" title="Аудио информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Добавлен MP3 плеер</a>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Добавлен MP3 плеер</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Медиа. Добавлен плеер для прослушивания музыки ТОП-100 (позже будет ТОП-200)" alt=""></div>
                   </li>
                   <li>
