--- a/index.html
+++ b/index.html
@@ -411,11 +411,11 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обнова в закладках: v.2019-03-21</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обнова в закладках: v.2019-03-22</span></a></div>
                 <ul>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
-                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://www.youtube.com/watch?v=IiLNEBWq6E0&amp;feature=youtu.be" target="_blank">Настройка ZAKLADOK</a>
+                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка ZAKLADOK</a>
                     <div class="icontooinfo a0repa3" title="Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне" alt=""></div>
                   </li>
                   <li>
