--- a/shops.html
+++ b/shops.html
@@ -250,7 +250,7 @@
                     <div class="icon yves-rocher ua"></div><a href="https://letyshops.com/r/yves-rocher-ua-4qh7st5csyyo0k" target="_blank">yves-rocher.ua`</a>
                   </li>
                   <li>
-                    <div class="icon bomond com ua"></div><a href="https://letyshops.com/r/bomond-4qh7st5csyyo0k" target="_blank">bomond.com.ua`</a>
+                    <div class="icon bomond com ua"></div><a href="https://bomond.com.ua/" target="_blank">bomond.com.ua</a>
                   </li>
                   <li>
                     <div class="icon ostrivkrasy com"></div><a href="https://letyshops.com/r/ostriv-krasi-4qh7st5csyyo0g" target="_blank">ostrivkrasy.com`</a>
