--- a/index.html
+++ b/index.html
@@ -419,13 +419,13 @@
                     <div class="icontooinfo a0repa3" title="Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon costaction com"></div>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5" target="_blank">Хранилище файлов`</a>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon costaction com"></div><a href="http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5" target="_blank">Хранилище файлов`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Добавлен MP3 плеер</a>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Добавлен MP3 плеер</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Медиа. Добавлен плеер для прослушивания музыки ТОП-100 (позже будет ТОП-200)" alt=""></div>
                   </li>
                   <li>
@@ -439,18 +439,18 @@
                     <div class="icontooinfo a0repa3" title="Дізнайся чи є ти в списках виборців? Непроєвибори! Переходь на сайт: drv.gov.ua" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon florium ua"></div>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon florium ua"></div><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon med-magazin ua"></div>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon med-magazin ua"></div><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon master-plus com ua"></div>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon master-plus com ua"></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс" alt=""></div>
                   </li>
                   <!-- тут реклама от ГУГЛ-->
