--- a/programs.html
+++ b/programs.html
@@ -85,6 +85,15 @@
                 </ul>
               </div>
               <div class="group">
+                <div class="group-title"><span class="badge badge-warning">Всяки настройки</span></div>
+                <ul>
+                  <li>
+                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка сайта ZAKLADOK</a>
+                    <div class="icontooinfo a0repa3" title="Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне" alt=""></div>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
                 <div class="group-title"><span class="badge badge-warning">Торрент-программы</span></div>
                 <ul>
                   <li>
