--- a/index.html
+++ b/index.html
@@ -499,7 +499,24 @@
                 "' alt='' title='LiveInternet: показано число просмотров и" +
                 " посетителей за 24 часа' " +
                 "border='0' width='88' height='31'>")
+                
               </script>
+              <!-- I.UA counter--><a href="https://www.i.ua/" target="_blank" onclick="this.href='https://i.ua/r.php?225197';" title="Rated by I.UA">
+                <script type="text/javascript">
+                  <!--
+                  iS='http'+(window.location.protocol=='https:'?'s':'')+
+                  '://r.i.ua/s?u225197&p118&n'+Math.random();
+                  iD=document;if(!iD.cookie)iD.cookie="b=b; path=/";if(iD.cookie)iS+='&c1';
+                  iS+='&d'+(screen.colorDepth?screen.colorDepth:screen.pixelDepth)
+                  +"&w"+screen.width+'&h'+screen.height;
+                  iT=iR=iD.referrer.replace(iP=/^[a-z]*:\\/\//,'');iH=window.location.href.replace(iP,'');
+                  ((iI=iT.indexOf('/'))!=-1)?(iT=iT.substring(0,iI)):(iI=iT.length);
+                  if(iT!=iH.substring(0,iI))iS+='&f'+escape(iR);
+                  iS+='&r'+escape(iH);
+                  iD.write('<img src="'+iS+'" border="0" width="88" height="31" />');
+                  //-->
+                </script></a>
+              <!-- End of I.UA counter-->
               <script type="text/javascript">
                 <!--
                 my_id = 168151;
