--- a/market.html
+++ b/market.html
@@ -240,7 +240,6 @@
                 "' alt='' title='LiveInternet: показано число просмотров и" +
                 " посетителей за 24 часа' " +
                 "border='0' width='88' height='31'>")
-                
               </script>
               <!-- I.UA counter--><a href="https://www.i.ua/" target="_blank" onclick="this.href='https://i.ua/r.php?225197';" title="Rated by I.UA">
                 <script type="text/javascript">
@@ -257,21 +256,10 @@
                   iD.write('<img src="'+iS+'" border="0" width="88" height="31" />');
                   //-->
                 </script></a>
-              <!-- End of I.UA counter-->
-              <script type="text/javascript">
-                <!--
-                my_id = 168151;
-                my_width = 88;
-                my_height = 31;
-                my_alt = "MyCounter - счётчик и статистика";
-                //-->
-              </script>
-              <script type="text/javascript" src="https://get.mycounter.ua/counter2.0.js"></script>
-              <noscript><a target="_blank" href="https://mycounter.ua/"><img src="https://get.mycounter.ua/counter.php?id=168151" title="MyCounter - счётчик и статистика" alt="" width="88" height="31" border="0"></a></noscript>
             </div>
           </div>
           <div class="col-sm footer-col">
-            <div class="kolobok"><a href="http://zakladki.at.ua/" target="_blank">Беседка</a> / <a href="http://zakladki.at.ua/index/0-3" target="_blank">Задать вопрос</a></div>
+            <div class="kolobok"><a href="http://zakladki.at.ua/" target="_blank">Беседка.</a> / <a href="http://zakladki.at.ua/index/0-3" target="_blank">Задать вопрос</a></div>
           </div>
         </div>
       </div>
