--- a/shops.html
+++ b/shops.html
@@ -396,22 +396,16 @@
                 " посетителей за 24 часа' " +
                 "border='0' width='88' height='31'>")
               </script>
-              <!-- I.UA counter--><a href="https://www.i.ua/" target="_blank" onclick="this.href='https://i.ua/r.php?225197';" title="Rated by I.UA">
-                <script type="text/javascript">
-                  <!--
-                  iS='http'+(window.location.protocol=='https:'?'s':'')+
-                  '://r.i.ua/s?u225197&p118&n'+Math.random();
-                  iD=document;if(!iD.cookie)iD.cookie="b=b; path=/";if(iD.cookie)iS+='&c1';
-                  iS+='&d'+(screen.colorDepth?screen.colorDepth:screen.pixelDepth)
-                  +"&w"+screen.width+'&h'+screen.height;
-                  iT=iR=iD.referrer.replace(iP=/^[a-z]*:\\/\/,'');iH=window.location.href.replace(iP,'');
-                  ((iI=iT.indexOf('/'))!=-1)?(iT=iT.substring(0,iI)):(iI=iT.length);
-                  if(iT!=iH.substring(0,iI))iS+='&f'+escape(iR);
-                  iS+='&r'+escape(iH);
-                  iD.write('<img src="'+iS+'" border="0" width="88" height="31" />');
-                  //-->
-                </script></a>
-              <!-- End of I.UA counter-->
+              <!-- HotLog--><span id="hotlog_counter"></span><span id="hotlog_dyn"></span>
+              <script type="text/javascript">
+                var hot_s = document.createElement('script');
+                hot_s.type = 'text/javascript'; hot_s.async = true;
+                hot_s.src = 'http://js.hotlog.ru/dcounter/2575836.js';
+                hot_d = document.getElementById('hotlog_dyn');
+                hot_d.appendChild(hot_s);
+              </script>
+              <noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=710" border="0" alt="HotLog"></a></noscript>
+              <!-- /HotLog-->
             </div>
           </div>
           <div class="col-sm footer-col">
