--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="WebSIS &amp; Company">
-    <meta name="keywords" content="лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, топ сайтів, speeddial, новости, соцсети, видео, погода">
+    <meta name="keywords" content="best sait, лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, топ сайтів, speeddial, новости, соцсети, видео, погода">
     <meta name="description" content="Полный список самых популярных сайтов интернета. Удобный каталог сайтов с сортировкой по тематике. Все топ сайты в одном месте. Все для удобства в интернете.">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Player-top-->
@@ -426,7 +426,7 @@
                   </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Добавлен MP3 плеер</a>
+                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Добавлен MP3 плеер</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Медиа. Добавлен плеер для прослушивания музыки ТОП-100 (позже будет ТОП-200)" alt=""></div>
                   </li>
                   <li>
@@ -509,7 +509,7 @@
                 hot_d = document.getElementById('hotlog_dyn');
                 hot_d.appendChild(hot_s);
               </script>
-              <noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=710" border="0" alt="HotLog"></a></noscript>
+              <noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=606" border="0" alt="HotLog"></a></noscript>
               <!-- /HotLog-->
             </div>
           </div>
