--- a/news.html
+++ b/news.html
@@ -366,8 +366,10 @@
                 hot_s.src = 'http://js.hotlog.ru/dcounter/2575836.js';
                 hot_d = document.getElementById('hotlog_dyn');
                 hot_d.appendChild(hot_s);
+                noscript
+                a(href='http://click.hotlog.ru/?2575836', target='_blank')
+                  img(src='http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&im=606', border='0', alt='HotLog')
               </script>
-              <noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=606" border="0" alt="HotLog"></a></noscript>
               <!-- /HotLog-->
             </div>
           </div>
