--- a/media.html
+++ b/media.html
@@ -279,12 +279,9 @@
                 hot_s.src = 'http://js.hotlog.ru/dcounter/2575836.js';
                 hot_d = document.getElementById('hotlog_dyn');
                 hot_d.appendChild(hot_s);
-                noscript
-                a(href='http://click.hotlog.ru/?2575836', target='_blank')
-                  img(src='http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&im=606', border='0', alt='HotLog')
               </script>
-              <!-- /HotLog-->
             </div>
+            <noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=606" border="0" alt="HotLog"></a></noscript>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok"><a href="http://zakladki.at.ua/" target="_blank">Беседка</a> / <a href="http://zakladki.at.ua/index/0-3" target="_blank">Задать вопрос</a></div>
