--- a/shops.html
+++ b/shops.html
@@ -396,7 +396,10 @@
                 " посетителей за 24 часа' " +
                 "border='0' width='88' height='31'>")
               </script>
-              <!-- HotLog--><span id="hotlog_counter"></span><span id="hotlog_dyn"></span>
+              <!-- HotLog
+              span#hotlog_counter
+              span#hotlog_dyn
+              -->
               <script type="text/javascript">
                 var hot_s = document.createElement('script');
                 hot_s.type = 'text/javascript'; hot_s.async = true;
@@ -404,8 +407,8 @@
                 hot_d = document.getElementById('hotlog_dyn');
                 hot_d.appendChild(hot_s);
               </script>
+              <noscript></noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=606" border="0" alt="HotLog"></a>
             </div>
-            <noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=606" border="0" alt="HotLog"></a></noscript>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok"><a href="http://zakladki.at.ua/" target="_blank">Беседка</a> / <a href="http://zakladki.at.ua/index/0-3" target="_blank">Задать вопрос</a></div>
