--- a/market.html
+++ b/market.html
@@ -252,7 +252,8 @@
                 hot_d = document.getElementById('hotlog_dyn');
                 hot_d.appendChild(hot_s);
               </script>
-              <noscript></noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=606" border="0" alt="HotLog"></a>
+              <noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=605" border="0" alt="HotLog"></a></noscript>
+              <!-- /HotLog-->
             </div>
           </div>
           <div class="col-sm footer-col">
