--- a/media.html
+++ b/media.html
@@ -283,7 +283,7 @@
                 hot_d = document.getElementById('hotlog_dyn');
                 hot_d.appendChild(hot_s);
               </script>
-              <noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=605" border="0" alt="HotLog"></a></noscript>
+              <noscript></noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=605" border="0" alt="HotLog"></a>
               <!-- /HotLog-->
             </div>
           </div>
