--- a/media.html
+++ b/media.html
@@ -272,10 +272,7 @@
                 " посетителей за 24 часа' " +
                 "border='0' width='88' height='31'>")
               </script>
-              <!-- HotLog
-              span#hotlog_counter
-              span#hotlog_dyn
-              -->
+              <!-- HotLog--><span id="hotlog_counter"></span><span id="hotlog_dyn"></span>
               <script type="text/javascript">
                 var hot_s = document.createElement('script');
                 hot_s.type = 'text/javascript'; hot_s.async = true;
