hotlog counter - ver-end

--- a/media.html
+++ b/media.html
@@ -272,7 +272,10 @@
                 " посетителей за 24 часа' " +
                 "border='0' width='88' height='31'>")
               </script>
-              <!-- HotLog--><span id="hotlog_counter"></span><span id="hotlog_dyn"></span>
+              <!-- HotLog
+              span#hotlog_counter
+              span#hotlog_dyn
+              -->
               <script type="text/javascript">
                 var hot_s = document.createElement('script');
                 hot_s.type = 'text/javascript'; hot_s.async = true;
