--- a/programs.html
+++ b/programs.html
@@ -202,6 +202,16 @@
                 " посетителей за 24 часа' " +
                 "border='0' width='88' height='31'>")
               </script>
+              <script type="text/javascript">
+                <!--
+                my_id = 168151;
+                my_width = 88;
+                my_height = 31;
+                my_alt = "MyCounter - счётчик и статистика";
+                //-->
+              </script>
+              <script type="text/javascript" src="https://get.mycounter.ua/counter2.0.js"></script>
+              <noscript><a target="_blank" href="https://mycounter.ua/"><img src="https://get.mycounter.ua/counter.php?id=168151" title="MyCounter - счётчик и статистика" alt="" width="88" height="31" border="0"></a></noscript>
               <!-- HotLog
               span#hotlog_counter
               span#hotlog_dyn
@@ -213,7 +223,7 @@
                 hot_d = document.getElementById('hotlog_dyn');
                 hot_d.appendChild(hot_s);
               </script>
-              <noscript></noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=606" border="0" alt="HotLog"></a>
+              <noscript></noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=605" border="0" width="1" height="1" alt="HotLog"></a>
               <!-- /HotLog-->
             </div>
           </div>
