--- a/shops.html
+++ b/shops.html
@@ -362,20 +362,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm footer-col">
-            <div class="kolobok"><a class="btn btn-primary btn-sm" href="https://www.ipay.ua/ru/p2p/default/constructor/01e03758f825e60c5dc13b12941f5ddf" title="Переслать немного денег на содержание сайта (заранее СПАСИБО Всем кто перекинет деньжат)" role="button" target="_blank">Поддержать сайт</a>
-              <!-- LiveInternet counter-->
-              <script type="text/javascript">
-                document.write("<a href='//www.liveinternet.ru/click' "+
-                "target=_blank><img src='//counter.yadro.ru/hit?t41.10;r"+
-                escape(document.referrer)+((typeof(screen)=="undefined")?"":
-                ";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
-                screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
-                ";h"+escape(document.title.substring(0,150))+";"+Math.random()+
-                "' alt='' title='LiveInternet' "+
-                "border='0' width='31' height='31'>")
-                
-              </script>
-            </div>
+            <div class="kolobok"><a class="btn btn-primary btn-sm" href="https://www.ipay.ua/ru/p2p/default/constructor/01e03758f825e60c5dc13b12941f5ddf" title="Переслать немного денег на содержание сайта (заранее СПАСИБО Всем кто перекинет деньжат)" role="button" target="_blank">Поддержать сайт</a></div>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok">
@@ -399,6 +386,18 @@
           <div class="col-sm footer-col">
             <div class="kolobok">
               <script type="text/javascript">
+                document.write("<a href='//www.liveinternet.ru/click' " +
+                "target=_blank><img src='//counter.yadro.ru/hit?t52.10;r" +
+                escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
+                ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
+                screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
+                ";h" + escape(document.title.substring(0, 150)) + ";" + Math.random() +
+                "' alt='' title='LiveInternet: показано число просмотров и" +
+                " посетителей за 24 часа' " +
+                "border='0' width='88' height='31'>")
+                
+              </script>
+              <script type="text/javascript">
                 <!--
                 my_id = 168151;
                 my_width = 88;
@@ -408,7 +407,7 @@
               </script>
               <script type="text/javascript" src="https://get.mycounter.ua/counter2.0.js"></script>
               <noscript><a target="_blank" href="https://mycounter.ua/"><img src="https://get.mycounter.ua/counter.php?id=168151" title="MyCounter - счётчик и статистика" alt="" width="88" height="31" border="0"></a></noscript>
-              <!-- HotLog--><span id="hotlog_counter"></span><span id="hotlog_dyn"></span>
+              <!-- HotLog невидимка--><span id="hotlog_counter"></span><span id="hotlog_dyn"></span>
               <script type="text/javascript">
                 var hot_s = document.createElement('script');
                 hot_s.type = 'text/javascript'; hot_s.async = true;
@@ -416,7 +415,7 @@
                 hot_d = document.getElementById('hotlog_dyn');
                 hot_d.appendChild(hot_s);
               </script>
-              <noscript></noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=605" border="0" alt="HotLog"></a>
+              <noscript></noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=605" border="0" width="1" height="1" alt="HotLog"></a>
             </div>
           </div>
           <div class="col-sm footer-col">
