--- a/news.html
+++ b/news.html
@@ -370,7 +370,10 @@
               </script>
               <script type="text/javascript" src="https://get.mycounter.ua/counter2.0.js"></script>
               <noscript><a target="_blank" href="https://mycounter.ua/"><img src="https://get.mycounter.ua/counter.php?id=168151" title="MyCounter - счётчик и статистика" alt="" width="88" height="31" border="0"></a></noscript>
-              <!-- HotLog невидимка--><span id="hotlog_counter"></span><span id="hotlog_dyn"></span>
+              <!-- HotLog невидимка
+              span#hotlog_counter
+              span#hotlog_dyn
+              -->
               <script type="text/javascript">
                 var hot_s = document.createElement('script');
                 hot_s.type = 'text/javascript'; hot_s.async = true;
