--- a/media.html
+++ b/media.html
@@ -74,14 +74,26 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.зарубежная (playlist.2019-04)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.зарубежная playlist.2019-04</span></div>
                 <ul>
                   <li></li>
                   <!-- тут код плеера-->
                   <div id="player" style="height:60px;width:240px">
-                    <script>var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist1zap.txt"});</script>
+                    <script>
+                      var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist1zap.txt"});
+                      
+                    </script>
                   </div>
-                  <!-- тут код плеера-->
+                  <li>
+                    <div class="icon a0download"></div><a href="https://turbo.to/gu3ln64vy8ua.html" target="_blank">Скачать_сборник_часть-1</a><a href="https://www.youtube.com/" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как скачать" alt=""></div></a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                  </li>
+                  <li>
+                    <div class="icon a0download"></div><a href="https://turbo.to/8epffn7os44f.html" target="_blank">Скачать_сборник_часть-2</a><a href="https://www.youtube.com/" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как скачать" alt=""></div></a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                  </li>
                 </ul>
               </div>
               <div class="group">
