--- a/index.html
+++ b/index.html
@@ -415,6 +415,11 @@
                 <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обнова в закладках: v.2019-03-23</span></a></div>
                 <ul>
                   <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Обновлен MP3 плеер</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Медиа. Обновлен плеер для прослушивания зарубежной музыки" alt=""></div>
+                  </li>
+                  <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
                     <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка ZAKLADOK</a>
                     <div class="icontooinfo a0repa3" title="Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне" alt=""></div>
@@ -423,11 +428,6 @@
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon costaction com"></div><a href="http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5" target="_blank">Хранилище файлов`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Добавлен MP3 плеер</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Медиа. Добавлен плеер для прослушивания музыки ТОП-100 (позже будет ТОП-200)" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
