--- a/media.html
+++ b/media.html
@@ -85,12 +85,12 @@
                     </script>
                   </div>
                   <li>
-                    <div class="icon a0download"></div><a href="https://turbo.to/gu3ln64vy8ua.html" target="_blank">Скачать_сборник_часть-1</a><a href="https://www.youtube.com/" target="_blank">
+                    <div class="icon a0download"></div><a href="https://turbo.to/gu3ln64vy8ua.html" target="_blank">Скачать_сборник_часть-1</a><a href="https://youtu.be/A4TSFq5P4O8" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как скачать" alt=""></div></a>
                     <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
                   </li>
                   <li>
-                    <div class="icon a0download"></div><a href="https://turbo.to/8epffn7os44f.html" target="_blank">Скачать_сборник_часть-2</a><a href="https://www.youtube.com/" target="_blank">
+                    <div class="icon a0download"></div><a href="https://turbo.to/8epffn7os44f.html" target="_blank">Скачать_сборник_часть-2</a><a href="https://youtu.be/A4TSFq5P4O8" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как скачать" alt=""></div></a>
                     <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
                   </li>
